<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Title -->

    <TextView
        android:id="@+id/promptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="171dp"
        android:gravity="center_horizontal"
        android:text="Prompt"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promptLabel"
        android:ems="10"
        android:hint="Add your own prompt here!"
        android:inputType="textShortMessage" >

        <requestFocus />
    </EditText>


    <!-- Status -->

    <TextView
        android:id="@+id/mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar"
        android:layout_marginBottom="-43dp"
        android:ems="10"
        android:hint="0"
        android:inputType="textShortMessage">

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prompt"
        android:layout_marginTop="8dp"
        android:text="@string/status_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/status"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/statusDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_string" />

        <RadioButton
            android:id="@+id/statusNotDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/incomplete_string" />
    </RadioGroup>

    <!-- Priority -->

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/statusGroup"
        android:layout_marginTop="8dp"
        android:text="Favorite?"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/status_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/priority"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <RadioButton
            android:id="@+id/status_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YES" />

        <RadioButton
            android:id="@+id/status_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="NO" />
    </RadioGroup>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string" />

    <TextView
        android:id="@+id/seekBarGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_group"
        android:text="How are you feeling?"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarGroup" />


    <TextView
        android:id="@+id/prompt_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:gravity="center_horizontal"
        android:text="Thoughts"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/entry"
        android:lines="15"
        android:gravity="top|start"
        android:inputType="textMultiLine"        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_entry"
        android:hint="Respond to your prompt here">
        <requestFocus />
    </EditText>
</RelativeLayout>